# RayTracer3

./: CMakeLists.txt  CMakeSettings.json  CoordinateSystem.txt  README.md
SDL2/: SDL2Config.cmake
src/: CMakeLists.txt  RayTracer3.cpp  RayTracer3.h
src/File/: CMakeLists.txt  bitmap.h
src/Optics/: CMakeLists.txt  Colour.h  Conversions.h  Material.h  Spectrum.h  SpectrumArray.h
src/Physics/: CMakeLists.txt  Interaction.h  Intersection.h  RayInfo.h
src/Physics/LightSources/: CMakeLists.txt  DirectionalLight.h  LightSource.h  PointLight.h  TorchLight.h
src/Physics/MaterialComponents/: CMakeLists.txt  DualCheckeredComponent.h  MaterialComponent.h  UniformMaterial.h
src/Physics/Surfaces/: CMakeLists.txt  Plane.h  Sphere.h  Surface.h  Triangle.h
src/Scene/: CMakeLists.txt  Camera.h  Canvas.h  Scene.h
src/Utility/: CMakeLists.txt
src/Utility/Containers/: CMakeLists.txt  DynamicContainer.h  List.h  Manager.h  Set.h
src/Utility/Geometry/: AxisAlignedBoundingBox.h  CMakeLists.txt  CompoundObject.h  Intersection.h  LineSegment.h  Space.h  Sphere.h  SphericalCoordinate.h  Triangle.h  TriangularMesh.h
src/Utility/Maths/: CMakeLists.txt  Linalg.h  MathUtil.h  Matrix.h  Quarternion.h  Vector.h
